--- a/backend/to-do-server/package.json
+++ b/backend/to-do-server/package.json
@@ -26,7 +26,9 @@
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.0.0",
     "@types/mongoose": "^5.5.12",
+    "core-util-is": "^1.0.2",
     "mongoose": "^5.6.9",
+    "nestjs-config": "^1.4.3",
     "passport": "^0.4.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
