--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -6,13 +6,11 @@
     "configurations": [
         {
             "type": "node",
-            "request": "launch",
-            "name": "Debug Nest Framework",
-            "args": ["${workspaceFolder}/to-do-server/src/main.ts"],
-            "runtimeArgs": ["--nolazy", "-r", "${workspaceFolder}/to-do-server/node_modules/ts-node/register"],
-            "sourceMaps": true,
-            "cwd": "${workspaceRoot}",
-            "protocol": "inspector"
+            "request": "attach",
+            "name": "Attach by Process ID",
+            "processId": "${command:PickProcess}"
         }
+
+    
     ]
 }
