--- a/backend/to-do-server/package.json
+++ b/backend/to-do-server/package.json
@@ -22,14 +22,18 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/jwt": "^6.1.1",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.0.0",
     "@types/mongoose": "^5.5.12",
+    "@types/passport-local": "^1.0.33",
     "core-util-is": "^1.0.2",
     "mongoose": "^5.6.9",
     "nestjs-config": "^1.4.3",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3"
