--- a/backend/to-do-server/package.json
+++ b/backend/to-do-server/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^5.6.9",
     "nestjs-config": "^1.4.3",
     "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
