--- a/frontend/to-do-client/package.json
+++ b/frontend/to-do-client/package.json
@@ -20,14 +20,25 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@google/maps": "^1.0.1",
+    "@ionic-native/camera": "^5.14.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.14.0",
+    "@ionic-native/file-path": "^5.14.0",
+    "@ionic-native/geolocation": "^5.14.0",
+    "@ionic-native/ionic-webview": "^5.14.0",
     "@ionic-native/native-storage": "^5.13.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.1.0",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-sqlite-storage": "^3.3.0",
     "core-js": "^2.5.4",
+    "leaflet": "^1.5.1",
     "mongodb-stitch-browser-sdk": "^4.5.0",
     "request-options": "^2.0.0",
     "rxjs": "~6.5.1",
@@ -44,6 +55,7 @@
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
     "@ionic/angular-toolkit": "~2.0.0",
+    "@types/googlemaps": "^3.37.7",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -73,10 +85,16 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-file": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
