--- a/frontend/to-do-client/package.json
+++ b/frontend/to-do-client/package.json
@@ -28,7 +28,9 @@
     "@ionic-native/geolocation": "^5.14.0",
     "@ionic-native/ionic-webview": "^5.14.0",
     "@ionic-native/native-storage": "^5.13.0",
+    "@ionic-native/network": "^5.16.0",
     "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/sqlite": "^5.16.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
