--- a/frontend/to-do-client/package.json
+++ b/frontend/to-do-client/package.json
@@ -34,7 +34,9 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
+    "bson-objectid": "^1.3.0",
     "cordova-android": "8.1.0",
+    "cordova-browser": "^6.0.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
@@ -42,6 +44,8 @@
     "core-js": "^2.5.4",
     "leaflet": "^1.5.1",
     "mongodb-stitch-browser-sdk": "^4.5.0",
+    "mongoose": "^5.7.8",
+    "objectid": "^3.2.1",
     "request-options": "^2.0.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -60,7 +64,7 @@
     "@types/googlemaps": "^3.37.7",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "^5.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -99,7 +103,8 @@
       "cordova-sqlite-storage": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
