--- a/backend/to-do-server/package.json
+++ b/backend/to-do-server/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/graphql": "^6.5.3",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/passport": "^6.1.0",
@@ -29,15 +30,21 @@
     "@types/mongoose": "^5.5.12",
     "@types/passport-jwt": "^3.0.1",
     "@types/passport-local": "^1.0.33",
+    "apollo-server-express": "^2.9.11",
     "bcrypt": "^3.0.6",
     "class-validator": "^0.10.0",
     "core-util-is": "^1.0.2",
+    "graphql": "^14.5.8",
     "mongoose": "^5.6.9",
     "nestjs-config": "^1.4.3",
     "passport": "^0.4.0",
+    "passport-facebook-token": "^3.3.0",
     "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-google-token": "^0.1.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "passport-token-google": "^0.1.2",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3"
@@ -48,6 +55,7 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
+    "@types/passport-facebook-token": "^0.4.33",
     "@types/supertest": "^2.0.7",
     "concurrently": "^4.1.0",
     "jest": "^23.6.0",
