--- a/frontend/todoClientReact/package.json
+++ b/frontend/todoClientReact/package.json
@@ -10,8 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.14",
+    "@types/react": "^16.9.15",
+    "@types/react-dom": "^16.9.4",
+    "axios": "^0.19.0",
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-native-action-button": "^2.8.5",
+    "react-native-gesture-handler": "^1.5.2",
+    "react-native-swipeout": "^2.3.6",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
+    "typescript": "^3.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
