--- a/frontend/todoClientReact/package.json
+++ b/frontend/todoClientReact/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todoClientReact",
+  "name": "todo-client-react",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -18,10 +18,14 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-action-button": "^2.8.5",
+    "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-swipeout": "^2.3.6",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.3",
     "typescript": "^3.7.3"
   },
   "devDependencies": {
