google maps integrated, added service for todo adding

--- a/frontend/todoClientReact/android/app/build.gradle
+++ b/frontend/todoClientReact/android/app/build.gradle
@@ -121,7 +121,8 @@ def enableHermes = project.ext.react.get("enableHermes", false);
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-
+packagingOptions {
+     pickFirst '**/libjsc.so'}
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -181,6 +182,13 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+
+implementation(project(':react-native-maps')){
+   exclude group: 'com.google.android.gms', module: 'play-services-base'
+   exclude group: 'com.google.android.gms', module: 'play-services-maps'
+}
+implementation 'com.google.android.gms:play-services-base:10.0.1'
+implementation 'com.google.android.gms:play-services-maps:10.0.1'
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
