--- a/frontend/todoClientReact/android/app/src/main/AndroidManifest.xml
+++ b/frontend/todoClientReact/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
   package="com.todoclientreact">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+ <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -10,6 +11,7 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -21,6 +23,11 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-    </application>
+    
+    <meta-data
+   android:name="com.google.android.geo.API_KEY"
+   android:value="AIzaSyCTn9l_7D24vYWbh5dzx9AJfa5bI92vYDk"/>
+
+   </application>
 
 </manifest>
