--- a/frontend/todoClientReact/android/build.gradle
+++ b/frontend/todoClientReact/android/build.gradle
@@ -6,6 +6,10 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 28
         targetSdkVersion = 28
+   // googlePlayServicesVersion   = "xxx" 
+    supportLibVersion   = "28.0"
+    //playServicesVersion = "xxx" // or set latest version
+    //androidMapsUtilsVersion = "xxx"
     }
     repositories {
         google()
@@ -16,6 +20,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        
     }
 }
 
