--- a/frontend/todoClientReact/android/app/build.gradle
+++ b/frontend/todoClientReact/android/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: "com.android.application"
-
+apply plugin: 'com.google.gms.google-services'
 import com.android.build.OutputFile
 
 /**
@@ -182,6 +182,7 @@ packagingOptions {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
 
 implementation(project(':react-native-maps')){
    exclude group: 'com.google.android.gms', module: 'play-services-base'
