--- a/frontend/todoClientReact/package.json
+++ b/frontend/todoClientReact/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/google-signin": "^3.0.4",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.15",
@@ -20,6 +21,7 @@
     "react-native-action-button": "^2.8.5",
     "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-image-picker": "^1.1.0",
     "react-native-maps": "^0.26.1",
     "react-native-swipeout": "^2.3.6",
     "react-navigation": "^4.0.10",
