--- a/frontend/todoClientReact/android/app/src/main/AndroidManifest.xml
+++ b/frontend/todoClientReact/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
    android:name="com.google.android.geo.API_KEY"
    android:value="AIzaSyCTn9l_7D24vYWbh5dzx9AJfa5bI92vYDk"/>
 
+<meta-data android:name="com.facebook.sdk.ApplicationId" 
+android:value="@string/facebook_app_id"/>
    </application>
 
 </manifest>
