--- a/frontend/todoClientReact/android/build.gradle
+++ b/frontend/todoClientReact/android/build.gradle
@@ -6,9 +6,8 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 28
         targetSdkVersion = 28
-   // googlePlayServicesVersion   = "xxx" 
-    supportLibVersion   = "28.0"
-    //playServicesVersion = "xxx" // or set latest version
+        supportLibVersion   = "28.0"
+        googlePlayServicesAuthVersion = "17.0.0" 
     //androidMapsUtilsVersion = "xxx"
     }
     repositories {
@@ -17,7 +16,8 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.4.2")
-        classpath 'com.google.gms:google-services:4.3.2'
+        
+      //  classpath("com.google.gms:google-services:4.3.2")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         
@@ -27,6 +27,7 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        google()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
@@ -36,7 +37,6 @@ allprojects {
             url("$rootDir/../node_modules/jsc-android/dist")
         }
 
-        google()
         jcenter()
         maven { url 'https://jitpack.io' }
     }
