--- a/frontend/todoClientReact/package.json
+++ b/frontend/todoClientReact/package.json
@@ -10,16 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/google-signin": "^3.0.4",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
     "axios": "^0.19.0",
+    "jetifier": "^1.6.5",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-action-button": "^2.8.5",
     "react-native-axios": "^0.17.1",
+    "react-native-fbsdk": "^1.1.1",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-image-picker": "^1.1.0",
     "react-native-maps": "^0.26.1",
