--- a/frontend/todoClientReact/package.json
+++ b/frontend/todoClientReact/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.9.4",
     "axios": "^0.19.0",
     "jetifier": "^1.6.5",
+    "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-action-button": "^2.8.5",
